Rutas Create-Account y Log-In funcionales.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,11 @@
-<app-logo></app-logo>
-<app-create-account></app-create-account>
-<app-log-in></app-log-in>
+<div class = "logo-container">
+    <h1>MindSpace</h1>
+</div>
+
+<div class="create-account-container">
+    <button class="create-account-button" routerLink="/create-account">Create Account</button>
+</div>
+
+<div class="log-in-container">
+    <button class="log-in-button" routerLink="/log-in">log In</button>
+</div>
