--- a/src/app/pages/create-account/create-account.component.html
+++ b/src/app/pages/create-account/create-account.component.html
@@ -1,3 +1,1 @@
-<div class="create-account-container">
-    <button class="create-account-button" routerLink='/page1'>Create Account</button>
-</div>
+<h1>Create-account Works</h1>
