--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -1,1 +1,11 @@
-<h1>Log In works</h1>
+<div class = "logo-container">
+    <h1>MindSpace</h1>
+</div>
+
+<div class="create-account-container">
+    <button class="create-account-button" routerLink="/create-account">Create Account</button>
+</div>
+
+<div class="log-in-container">
+    <button class="log-in-button" routerLink="/log-in">log In</button>
+</div>
