--- a/src/app/pages/create-account/create-account.component.html
+++ b/src/app/pages/create-account/create-account.component.html
@@ -3,7 +3,27 @@
 </div>
 
 <div class="create-account-container">
+
     <button class="create-account-button" routerLink="/create-account">Create Account</button>
+    <br>
+
+    <div id="create-account-form">
+        <label>User name:</label>
+        <input type="text" id="user-input" required>
+        <br>
+    
+        <label>Email:</label>
+        <input type="text" id="email-input" required>
+        <br>
+   
+        <label>Password:</label>
+        <input type="text" id="password-input" required>
+        <br>
+    </div>
+    <br>
+
+    <button class="continue-create-account">Continue</button>
+
 </div>
 
 <div class="log-in-container">
