--- a/src/app/pages/log-in/log-in.component.css
+++ b/src/app/pages/log-in/log-in.component.css
@@ -99,4 +99,35 @@
     background: linear-gradient(rgba(83, 89, 39, 1),rgba(132, 140, 66, 1)); 
 }
 
+#log-in-form{
+    box-sizing: border-box; /*Hace que las dimensiones de border, pathing y margin se incluyan dentro de las dimenciones del box*/
+    width: 100%;
+    padding:10px;/*Margen interno del box*/
+}
+
+#email-input{
+    margin:10px;/*Margen externo del box*/
+}
+
+#password-input{
+    margin:10px;/*Margen externo del box*/
+}
+
+.continue-log-in{
+    border-radius: 5px;
+    height: 30px;
+    background: linear-gradient(rgba(33, 112, 177, 1),rgba(14, 47, 75, 1));
+    color: blanchedalmond;
+    border:0px;
+    transition-duration:0s;/*Tiempo de transición a hover(Cuando cursos pasa encima) y activated(Cuando se activa)*/
+}
+
+.continue-log-in:hover{
+    background: rgba(33, 112, 177, 1);
+}
+
+.continue-log-in:active{
+    background: linear-gradient(rgba(14, 47, 75, 1),rgba(33, 112, 177, 1));
+}
+
 /*Dimensiones totales de la pantalla: height = 645px */
