--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -7,5 +7,21 @@
 </div>
 
 <div class="log-in-container">
+    
     <button class="log-in-button" routerLink="/log-in">log In</button>
-</div>
+    <br>
+
+    <div id="log-in-form">
+        <label>Email:</label>
+        <input type="text" id="email-input" required>
+        <br>
+   
+        <label>Password:</label>
+        <input type="text" id="password-input" required>
+        <br>
+    </div>
+    <br>
+
+    <button class="continue-log-in">Continue</button>
+
+</div> 
